syntax ="proto3";

option go_package = "genproto/manager_service";

package manager_service;


// Service for managing teachers
service ManagerTeacherService {
    rpc Createteacher(CreateManagerTeacher) returns (ManagerTeacher) {}
    rpc GetteacherByI(ManagerTeacherPrimaryKey) returns (ManagerTeacher) {}
    rpc GetAllteacher(GetListManagerTeacherRequest) returns (GetListManagerTeacherResponse) {}
    rpc Updateteacher(UpdateManagerTeacher) returns (ManagerTeacher) {}
    rpc Deleteteacher(ManagerTeacherPrimaryKey) returns (ManagerTeacherPrimaryKey) {}
}



message ManagerTeacherPrimaryKey {
    string id = 1;
}

message CreateManagerTeacher {
    string fullname = 1;
    string phone = 2;
    string password = 3;
    float salary = 4;
    float ielts_score = 5;
    string ielts_attempts_count = 6;
    string branch = 7;
    string group_id = 8;

}

message ManagerTeacher {
    string id = 1;
    string fullname = 2;
    string phone = 3;
    string password = 4;
    float salary = 5;
    float ielts_score = 6;
    string ielts_attempts_count = 7;
    string branch = 8;
    int64 role_id = 9;
    string login =10;

}

message UpdateManagerTeacher {
    string id = 1;
    string fullname = 2;
    string phone = 3;
    string password = 4;
    float salary = 5;
    float ielts_score = 6;
    string ielts_attempts_count = 7;
    string branch = 8;
    int64 role_id = 9;

}

message GetListManagerTeacherRequest {
    uint64 page = 1;
    uint64 limit = 2;
    string search = 3;
}

message GetListManagerTeacherResponse {
    int64 count = 1;
    repeated ManagerTeacher manager_teachers = 2;
}
